--- a/apps/desktop/index.html
+++ b/apps/desktop/index.html
@@ -5,6 +5,16 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mail Client</title>
+    <style>
+      html, body {
+        background: transparent !important;
+        margin: 0;
+        padding: 0;
+      }
+      #root {
+        background: transparent !important;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
