--- a/apps/desktop/index.html
+++ b/apps/desktop/index.html
@@ -19,6 +19,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <!-- Tauri script viene iniettato automaticamente quando si usa tauri:dev -->
   </body>
 </html>
 
